[metadata]
name = inspyred
version = 1.0.3
author = Aaron Garrett
author_email = garrett@inspiredintelligence.io
url = https://github.com/aarongarrett/inspyred
license = MIT
description = A framework for creating bio-inspired computational intelligence algorithms in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    Click>=6.0
    numpy

packages = find:

[options.packages.find]
where = .
include = inspyred*

[options.entry_points]
console_scripts =
    inspyred = inspyred.cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
